Correct alignment of bar chart

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -221,7 +221,7 @@ input[type="radio"] {
   div.wrapper {
     position: absolute;
     top: 0;
-    left: 0;
+    left: 11px;
     right: 68px;
   }
 
